export excel and build to jar